--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,10 @@
-Master Hackers:
+Corn Author:
+
+Nick Welch <nick@incise.org>
+
+Corn is a fork of Quark.
+
+Quark Authors:
 
 Ben Jansens [xor@orodu.net]
 Scott Moynes [smoynes@nerdnest.org]
